// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<resize-box> demo: > render [basic] correctly 1`] = `
<div>
  <div class="sd-resizebox sd:w-125 sd:min-w-25 sd:max-w-full sd:h-50 sd:text-center">
    <div class="sd-typography">We are building the future of content discovery and creation.
      <!---->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div role="separator" class="sd-divider sd-divider-horizontal">
      <!---->
    </div>
    <div class="sd-typography"> ByteDance's content platforms enable people to enjoy content powered by AI technology. We inform, entertain, and inspire people across language, culture and geography.
      <!---->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div role="separator" class="sd-divider sd-divider-horizontal sd-divider-with-text"><span class="sd-divider-text sd-divider-text-center">ByteDance</span></div>
    <div class="sd-typography">Yiming Zhang is the founder and CEO of ByteDance.
      <!---->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="sd-resizebox-trigger sd-resizebox-trigger-vertical sd-resizebox-direction-right">
      <!-- @slot 自定义内容 -->
      <div class="sd-resizebox-trigger-icon-wrapper">
        <!-- @slot 自定义 icon --><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-drag-dot-vertical sd-resizebox-trigger-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path fill="currentColor" stroke="none" d="M17 8h2v2h-2zM17 23h2v2h-2zM17 38h2v2h-2zM29 8h2v2h-2zM29 23h2v2h-2zM29 38h2v2h-2z"></path>
          <path d="M17 8h2v2h-2zM17 23h2v2h-2zM17 38h2v2h-2zM29 8h2v2h-2zM29 23h2v2h-2zM29 38h2v2h-2z"></path>
        </svg>
      </div>
    </div>
    <div class="sd-resizebox-trigger sd-resizebox-trigger-horizontal sd-resizebox-direction-bottom">
      <!-- @slot 自定义内容 -->
      <div class="sd-resizebox-trigger-icon-wrapper">
        <!-- @slot 自定义 icon --><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-drag-dot sd-resizebox-trigger-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path fill="currentColor" stroke="none" d="M40 17v2h-2v-2zM25 17v2h-2v-2zM10 17v2H8v-2zM40 29v2h-2v-2zM25 29v2h-2v-2zM10 29v2H8v-2z"></path>
          <path d="M40 17v2h-2v-2zM25 17v2h-2v-2zM10 17v2H8v-2zM40 29v2h-2v-2zM25 29v2h-2v-2zM10 29v2H8v-2z"></path>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<resize-box> demo: > render [controlled] correctly 1`] = `
<div>
  <div class="sd-resizebox sd:min-w-25 sd:max-w-full sd:text-center" style="width: 500px; height: 200px;">
    <div class="sd-typography">We are building the future of content discovery and creation.
      <!---->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div role="separator" class="sd-divider sd-divider-horizontal">
      <!---->
    </div>
    <div class="sd-typography"> ByteDance's content platforms enable people to enjoy content powered by AI technology. We inform, entertain, and inspire people across language, culture and geography.
      <!---->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div role="separator" class="sd-divider sd-divider-horizontal sd-divider-with-text"><span class="sd-divider-text sd-divider-text-center">ByteDance</span></div>
    <div class="sd-typography">Yiming Zhang is the founder and CEO of ByteDance.
      <!---->
      <!--v-if-->
      <!--v-if-->
      <!--v-if-->
    </div>
    <div class="sd-resizebox-trigger sd-resizebox-trigger-vertical sd-resizebox-direction-right">
      <!-- @slot 自定义内容 -->
      <div class="sd-resizebox-trigger-icon-wrapper">
        <!-- @slot 自定义 icon --><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-drag-dot-vertical sd-resizebox-trigger-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path fill="currentColor" stroke="none" d="M17 8h2v2h-2zM17 23h2v2h-2zM17 38h2v2h-2zM29 8h2v2h-2zM29 23h2v2h-2zM29 38h2v2h-2z"></path>
          <path d="M17 8h2v2h-2zM17 23h2v2h-2zM17 38h2v2h-2zM29 8h2v2h-2zM29 23h2v2h-2zM29 38h2v2h-2z"></path>
        </svg>
      </div>
    </div>
    <div class="sd-resizebox-trigger sd-resizebox-trigger-horizontal sd-resizebox-direction-bottom">
      <!-- @slot 自定义内容 -->
      <div class="sd-resizebox-trigger-icon-wrapper">
        <!-- @slot 自定义 icon --><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-drag-dot sd-resizebox-trigger-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
          <path fill="currentColor" stroke="none" d="M40 17v2h-2v-2zM25 17v2h-2v-2zM10 17v2H8v-2zM40 29v2h-2v-2zM25 29v2h-2v-2zM10 29v2H8v-2z"></path>
          <path d="M40 17v2h-2v-2zM25 17v2h-2v-2zM10 17v2H8v-2zM40 29v2h-2v-2zM25 29v2h-2v-2zM10 29v2H8v-2z"></path>
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`<resize-box> demo: > render [custom-triggers] correctly 1`] = `
<div data-v-4187a860="" class="sd-resizebox sd:w-125 sd:min-w-25 sd:max-w-full sd:h-50 sd:text-center">
  <div data-v-4187a860="" class="sd-typography">We are building the future of content discovery and creation.
    <!---->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-v-4187a860="" role="separator" class="sd-divider sd-divider-horizontal">
    <!---->
  </div>
  <div data-v-4187a860="" class="sd-typography"> ByteDance's content platforms enable people to enjoy content powered by AI technology. We inform, entertain, and inspire people across language, culture and geography.
    <!---->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-v-4187a860="" role="separator" class="sd-divider sd-divider-horizontal sd-divider-with-text"><span class="sd-divider-text sd-divider-text-center">ByteDance</span></div>
  <div data-v-4187a860="" class="sd-typography">Yiming Zhang is the founder and CEO of ByteDance.
    <!---->
    <!--v-if-->
    <!--v-if-->
    <!--v-if-->
  </div>
  <div class="sd-resizebox-trigger sd-resizebox-trigger-vertical sd-resizebox-direction-right">
    <!-- @slot 自定义内容 -->
    <div data-v-4187a860="" class="resizebox-demo resizebox-demo-vertical">
      <div data-v-4187a860="" class="resizebox-demo-line"></div>
    </div>
  </div>
  <div class="sd-resizebox-trigger sd-resizebox-trigger-horizontal sd-resizebox-direction-bottom">
    <!-- @slot 自定义内容 -->
    <div data-v-4187a860="" class="resizebox-demo resizebox-demo-horizontal">
      <div data-v-4187a860="" class="resizebox-demo-line"></div>
    </div>
  </div>
</div>
`;

exports[`<resize-box> demo: > render [layout] correctly 1`] = `
<div data-v-8c775dfe="" class="layout-demo">
  <section data-v-8c775dfe="" class="sd-layout">
    <div data-v-8c775dfe="" class="sd-layout-header-wrapper">
      <header class="sd-layout-header" style="--sd-layout-header-content-height: 64px; --sd-layout-header-extension-height: 0px; --sd-layout-header-image-opacity: 1; height: 64px;">
        <!--v-if-->
        <div class="sd-layout-header-bar">
          <!--v-if-->
          <!--v-if-->
          <div class="sd-layout-header-content">Header</div>
          <!--v-if-->
        </div>
        <!--v-if-->
      </header>
    </div>
    <section data-v-8c775dfe="" class="sd-layout">
      <div data-v-8c775dfe="" class="sd-resizebox sd-layout-sider sd-layout-sider-light sd-layout-sider-left" style="width: 200px;">
        <!--v-if-->
        <!--v-if-->
        <!--v-if-->
        <div class="sd-layout-sider-children"> Sider </div>
        <!--v-if-->
        <!--v-if-->
        <div class="sd-resizebox-trigger sd-resizebox-trigger-vertical sd-resizebox-direction-right">
          <!-- @slot 自定义内容 -->
          <div class="sd-resizebox-trigger-icon-wrapper">
            <!-- @slot 自定义 icon --><svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" viewBox="0 0 48 48" class="sd-icon sd-icon-drag-dot-vertical sd-resizebox-trigger-icon" stroke-width="4" stroke-linecap="butt" stroke-linejoin="miter">
              <path fill="currentColor" stroke="none" d="M17 8h2v2h-2zM17 23h2v2h-2zM17 38h2v2h-2zM29 8h2v2h-2zM29 23h2v2h-2zM29 38h2v2h-2z"></path>
              <path d="M17 8h2v2h-2zM17 23h2v2h-2zM17 38h2v2h-2zM29 8h2v2h-2zM29 23h2v2h-2zM29 38h2v2h-2z"></path>
            </svg>
          </div>
        </div>
      </div>
      <main data-v-8c775dfe="" class="sd-layout-content">Content</main>
    </section>
    <footer data-v-8c775dfe="" class="sd-layout-footer">Footer</footer>
  </section>
</div>
`;
